--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,14 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
 
-  - title: "Talks"
-    url: /talks/    
-
-  - title: "Teaching"
-    url: /teaching/    
-    
   - title: "Portfolio"
     url: /portfolio/
+
+  - title: "Work Experience"
+    url: /work/
+
+  - title: "Publications"
+    url: /publications/ 
         
   - title: "Blog Posts"
     url: /year-archive/
