--- a/_config.yml
+++ b/_config.yml
@@ -181,6 +181,9 @@ collections:
   portfolio:
     output: true
     permalink: /:collection/:path/
+  work:
+    output: true
+    permalink: /:collection/:path/
   talks:
     output: true
     permalink: /:collection/:path/
@@ -219,6 +222,15 @@ defaults:
   - scope:
       path: ""
       type: portfolio
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
+  # _work
+  - scope:
+      path: ""
+      type: work
     values:
       layout: single
       author_profile: true
