--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
   - title: "Portfolio"
     url: /portfolio/
 
-  - title: "Work Experience"
+  - title: "Professional Experience"
     url: /work/
 
   - title: "Publications and Awards"
