--- a/_config.yml
+++ b/_config.yml
@@ -184,7 +184,7 @@ collections:
   work:
     output: true
     permalink: /:collection/:path/
-  talks:
+  social:
     output: true
     permalink: /:collection/:path/
 
@@ -194,14 +194,10 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type: posts
+      type: pages
     values:
       layout: single
       author_profile: true
-      read_time: true
-      comments: true
-      share: true
-      related: true
   # _pages
   - scope:
       path: ""
