--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,7 +11,7 @@ main:
     url: /publications/ 
         
   - title: "Contributing back to society"
-    url: /year-archive/
+    url: /social/
     
   - title: "CV"
     url: /cv/
