collapsible about testing

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Jayant Teotia"
   avatar           : "Profile.jpg"
-  bio              : "Research Assisstant"
+  bio              : "Research Assistant"
   location         : "IISc Bangalore"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
