edit in studies

--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Jayant Teotia"
   avatar           : "Profile.jpg"
-  bio              : "Research Assistant"
-  location         : "IISc Bangalore"
+  bio              : "PhD Student"
+  location         : "NTU Singapore"
   employer         :
   #pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=J8xcaa8AAAAJ&hl=en"
